src/github.com/ebay/beam/query/parser/testdata/ask/errors/ask_var.bql
ASK ?rims
WHERE {
	?rims <color> "white"
}
